Bug 458407 - Content is blended when on top of a glass region of a window [r=roc]